--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap');
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Kiwi Maru', serif;
+}
+
 .App {
   text-align: center;
 }
@@ -14,7 +22,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1b2838;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,3 +44,7 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+
