--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,7 +3,7 @@
     background-color:#171a21;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     text-align: center;
 }
@@ -15,9 +15,10 @@
 }
 
 .navbar-h1 {
+
     vertical-align: center;
     text-align: center;
-    width: 100%;
+    width: 94%;
     color:#c7d5e0;
 }
 
@@ -40,7 +41,7 @@
 
 .nav-text {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding: 8px 0px 8px 16px;
     list-style: none;
@@ -72,7 +73,7 @@
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 
