Final JH Version
Changed Custom to Tuple. Made Steam page blank. V3 and V5 changed to reflect that they are both percentages for different things (Game vs Bundle)

--- a/src/components/Visualization/Visualization.css
+++ b/src/components/Visualization/Visualization.css
@@ -29,3 +29,15 @@
   position: absolute;
   top: 940px;
 }
+
+.output {
+  position: absolute;
+  top: 400px;
+  right: 850px;
+  font-size: calc(10px + 4vmin);
+}
+
+.outputButton {
+  position: absolute;
+  top: 400px;
+}
